--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,46 +1,3 @@
-h4 {
-  display: inline-block;
-  white-space: nowrap;
-  font-size:15px;
-  font-weight:normal;
-  background-color: #eee;
-  border-radius: 7px;
-  padding: 8px 10px;
-  margin: 5px 3px;
-  border: 1px solid #eee;
-
-}
-
-h4:hover{
-  border: 1px solid grey;
-}
-
-h4:active{
-  border: 1px solid grey;
-}
-
-h4:focus {
-  border: 1px solid grey;
-}
-
-h4.highlight {
-  background-color: #ffedcc;
-  border: 1px solid #ffedcc;
-}
-
-h4.highlight:hover {
-  border: 1px solid grey;
-}
-
-h4.highlight:active {
-  border: 1px solid grey;
-}
-
-h4.highlight:focus {
-  border: 1px solid grey;
-}
-
-
 h3 {
   font-style: italic;
   color:grey;
